inserção de estilização do site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- CABECALHO -->
 <!-- CORPO -->
 <!-- RODAPE -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="styles.css">
     <title>Meu Projeto</title>
 </head>
 
@@ -21,12 +22,12 @@
             <label for="senha">Senha</label>
             <input type="password" name="senha" id="senha" placeholder="informe sua senha">
             <a href="#" id="esqueci-minha-senha">Esqueci minha senha</a>
-            <input type="submit" value="Acessar">
+            <input type="submit" value="Entrar">
         </form>
         <div id="social-container">
             <p>Ou acesse com sua rede social</p>
             <i class="fa fa-facebook-f"></i>
-            <i class="fa fa-cloud"></i>
+            <i class="fa fa-linkedin"></i>
             <p>Ainda não tem uma conta?</p><br>
             <a href="#" id="registro">Criar meu cadastro</a>
 
