Arquivo final do projeto - TELA DE LOGIN

--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
             <input type="submit" value="Entrar">
         </form>
         <div id="social-container">
-            <p>Ou acesse com sua rede social</p>
+            <p class="paragrafo-social">Ou acesse com sua rede social</p>
             <i class="fa fa-facebook-f"></i>
             <i class="fa fa-linkedin"></i>
-            <p>Ainda não tem uma conta?</p><br>
+            <p class="novo-paragrafo">Ainda não tem uma conta?</p><br>
             <a href="#" id="registro">Criar meu cadastro</a>
 
         </div>
     </div>
 </body>
+    <footer>
+        <p class="assinatura">Leonardo Mendonca</p>
+        <br>
+        <p class="assinatura"> Projeto 1 - Mentoria CSV </p>
+    </footer>
+
 </html>
